--- a/ouessant.html
+++ b/ouessant.html
@@ -224,7 +224,29 @@ L’île devient un espace liminaire — frontière géographique et spirituelle
 <footer class="site-footer">
 <div class="footer-inner">
 <div class="footer-left">
-<button class="like-btn">❤</button>
+  <button class="like-btn">❤</button>
+
+  <div class="social-icons">
+
+    <!-- LinkedIn -->
+    <a class="icon"
+       href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/ouessant.html"
+       target="_blank"
+       rel="noopener"
+       title="LinkedIn">
+      <!-- ton SVG LinkedIn ici -->
+    </a>
+
+    <!-- Facebook -->
+    <a class="icon"
+       href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/ouessant.html"
+       target="_blank"
+       rel="noopener"
+       title="Facebook">
+      <!-- ton SVG Facebook ici -->
+    </a>
+
+  </div>
 </div>
 <div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
