--- a/ouessant.html
+++ b/ouessant.html
@@ -20,134 +20,130 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-<link href="css/style.css?v=20260115" rel="stylesheet">
 
 <style>
 
 /* ===== GLOBAL ===== */
-html, body{
-  margin:0;
-  padding:0;
-  background:#5c5c5c;
-  color:#ffffff;
-  font-family:'Inter', sans-serif;
+html,body{
+margin:0;
+padding:0;
+background:#5c5c5c;
+color:#fff;
+font-family:'Inter',sans-serif;
 }
 
-/* ===== STRUCTURE ===== */
-.lieu-wrapper{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 16px;
+/* ===== HEADER (minimal safe version) ===== */
+.site-header{
+background:#000;
+padding:1rem 0;
 }
 
-.lieu-title{
-  text-align:center;
-  color:#f28c28;
-  font-family:'Libre Baskerville', serif;
-  font-size:2.2rem;
-  margin:2.5rem 0 2rem;
+.nav{
+max-width:1200px;
+margin:0 auto;
+padding:0 20px;
+display:flex;
+justify-content:space-between;
+align-items:center;
 }
 
-.map-full img{
-  width:100%;
-  height:auto;
-  display:block;
+.nav a{
+color:#f28c28;
+text-decoration:none;
+margin-right:15px;
 }
 
 /* ===== CONTENT ===== */
+.lieu-wrapper{
+max-width:1200px;
+margin:0 auto;
+padding:0 16px;
+}
+
+.lieu-title{
+text-align:center;
+color:#f28c28;
+font-family:'Libre Baskerville',serif;
+font-size:2.2rem;
+margin:2.5rem 0 2rem;
+}
+
+.map-full img{
+width:100%;
+display:block;
+}
+
 .lieu-content{
-  max-width:900px;
-  margin:3rem auto 4rem;
-  padding:0 16px;
-  line-height:1.75;
-  font-size:1.05rem;
+max-width:900px;
+margin:3rem auto 4rem;
+padding:0 16px;
+line-height:1.75;
+font-size:1.05rem;
 }
 
 .lieu-content h2{
-  color:#f28c28;
-  font-family:'Libre Baskerville', serif;
-  margin-top:3rem;
-  margin-bottom:1rem;
-  font-size:1.6rem;
-}
-
-.lieu-content p{
-  margin-bottom:1.2rem;
-}
-
-a{
-  color:#f28c28;
-  text-decoration:none;
-}
-
-a:hover{
-  text-decoration:underline;
-}
-
-.lien-sorcieres{
-  font-weight:500;
+color:#f28c28;
+font-family:'Libre Baskerville',serif;
+margin-top:3rem;
 }
 
 /* ===== FOOTER ===== */
 .site-footer{
-  background:#000;
-  padding:1.6rem 0;
+background:#000;
+padding:1.6rem 0;
 }
 
 .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+max-width:1200px;
+margin:0 auto;
+padding:0 20px;
+display:flex;
+justify-content:space-between;
+align-items:center;
 }
 
 .footer-left{
-  display:flex;
-  align-items:center;
-  gap:1.2rem;
+display:flex;
+align-items:center;
+gap:20px;
 }
 
 .like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.35rem 0.7rem;
-  cursor:pointer;
-  font-size:0.9rem;
+background:none;
+border:1px solid #f28c28;
+color:#f28c28;
+padding:5px 10px;
+cursor:pointer;
 }
 
 .social-icons{
-  display:flex;
-  gap:1rem;
+display:flex;
+gap:18px;
 }
 
-.icon svg{
-  width:22px;
-  height:22px;
-  fill:#f28c28;
-  transition:opacity 0.2s ease, transform 0.2s ease;
+.social-icons a{
+display:inline-flex;
+align-items:center;
 }
 
-.icon:hover svg{
-  opacity:0.75;
-  transform:translateY(-2px);
+.social-icons svg{
+width:22px;
+height:22px;
+fill:#f28c28;
+transition:0.2s ease;
+}
+
+.social-icons svg:hover{
+opacity:0.7;
+transform:translateY(-2px);
 }
 
 .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
-
-@media screen and (max-width:768px){
-  .lieu-title{ font-size:1.7rem; }
-  .lieu-content{ font-size:1rem; }
+background:#1f1f1f;
+color:#f28c28;
+padding:8px 16px;
+text-decoration:none;
+border-radius:3px;
 }
 
 </style>
@@ -157,16 +153,12 @@ a:hover{
 
 <header class="site-header">
 <nav class="nav">
-<div class="nav-title">
+<div>
 <a href="index.html">retour</a>
 </div>
-<div class="nav-menu">
-<a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
-<a href="personnages.html">les<span>personnages</span></a>
-<a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
-<a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
-<a href="bibliographie.html">bibliographie</a>
-<a href="making-off.html">making of</a>
+<div>
+<a href="lieux-du-roman.html">les lieux</a>
+<a href="personnages.html">personnages</a>
 <a href="contact.html">contact</a>
 </div>
 </nav>
@@ -176,6 +168,7 @@ a:hover{
 
 <div class="lieu-wrapper">
 <h1 class="lieu-title">Île d’Ouessant (Enez Eusa)</h1>
+
 <div class="map-full">
 <img src="images/cartes/ouessant.jpg" alt="Carte de l’île d’Ouessant">
 </div>
@@ -184,24 +177,16 @@ a:hover{
 <section class="lieu-content">
 
 <h2>Un héritage insulaire ancien</h2>
-<p>
-Les <a href="sorcieres.html" class="lien-sorcieres">trois sorcières</a> ne surgissent pas du néant...
-</p>
+<p>Texte…</p>
 
 <h2>Archéologie du rivage : les berniques</h2>
-<p>
-Les récentes fouilles archéologiques ont mis au jour...
-</p>
+<p>Texte…</p>
 
 <h2>Le passage de Paol Aurélien</h2>
-<p>
-La tradition rapporte que Paol Aurélien aborda d’abord l’île...
-</p>
+<p>Texte…</p>
 
 <h2>Résistance et mémoire</h2>
-<p>
-L’île devient un espace liminaire — frontière géographique et spirituelle...
-</p>
+<p>Texte…</p>
 
 </section>
 </main>
@@ -210,17 +195,18 @@ L’île devient un espace liminaire — frontière géographique et spirituelle
 <div class="footer-inner">
 
 <div class="footer-left">
+
 <button class="like-btn">❤</button>
 
 <div class="social-icons">
 
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/ouessant.html" target="_blank" rel="noopener" title="Partager sur LinkedIn">
+<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/ouessant.html" target="_blank">
 <svg viewBox="0 0 24 24">
 <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-8.5c0-2-.04-4.5-2.8-4.5-2.8 0-3.2 2.2-3.2 4.3V24h-4V8z"/>
 </svg>
 </a>
 
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/ouessant.html" target="_blank" rel="noopener" title="Partager sur Facebook">
+<a href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/ouessant.html" target="_blank">
 <svg viewBox="0 0 24 24">
 <path d="M22 12a10 10 0 10-11.5 9.9v-7H8v-3h2.5V9.5c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.7-1.6 1.5V12H17l-.4 3h-2.7v7A10 10 0 0022 12z"/>
 </svg>
@@ -229,7 +215,7 @@ L’île devient un espace liminaire — frontière géographique et spirituelle
 </div>
 </div>
 
-<div class="footer-right">
+<div>
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
 
