--- a/ouessant.html
+++ b/ouessant.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,130 +19,77 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="css/style.css?v=20260115" rel="stylesheet">
 
 <style>
 
-/* ===== GLOBAL ===== */
-html,body{
-margin:0;
-padding:0;
-background:#5c5c5c;
-color:#fff;
-font-family:'Inter',sans-serif;
+/* ===== FOND GLOBAL ===== */
+html, body{
+  margin:0;
+  padding:0;
+  background:#5c5c5c;
+  color:#ffffff;
+  font-family:'Inter', sans-serif;
 }
 
-/* ===== HEADER (minimal safe version) ===== */
-.site-header{
-background:#000;
-padding:1rem 0;
-}
-
-.nav{
-max-width:1200px;
-margin:0 auto;
-padding:0 20px;
-display:flex;
-justify-content:space-between;
-align-items:center;
-}
-
-.nav a{
-color:#f28c28;
-text-decoration:none;
-margin-right:15px;
-}
-
-/* ===== CONTENT ===== */
+/* ===== STRUCTURE ===== */
 .lieu-wrapper{
-max-width:1200px;
-margin:0 auto;
-padding:0 16px;
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 16px;
 }
 
 .lieu-title{
-text-align:center;
-color:#f28c28;
-font-family:'Libre Baskerville',serif;
-font-size:2.2rem;
-margin:2.5rem 0 2rem;
+  text-align:center;
+  color:#f28c28;
+  font-family:'Libre Baskerville', serif;
+  font-size:2.2rem;
+  margin:2.5rem 0 2rem;
 }
 
 .map-full img{
-width:100%;
-display:block;
+  width:100%;
+  height:auto;
+  display:block;
 }
 
+/* ===== CONTENU ===== */
 .lieu-content{
-max-width:900px;
-margin:3rem auto 4rem;
-padding:0 16px;
-line-height:1.75;
-font-size:1.05rem;
+  max-width:900px;
+  margin:3rem auto 4rem;
+  padding:0 16px;
+  line-height:1.75;
+  font-size:1.05rem;
 }
 
 .lieu-content h2{
-color:#f28c28;
-font-family:'Libre Baskerville',serif;
-margin-top:3rem;
+  color:#f28c28;
+  font-family:'Libre Baskerville', serif;
+  margin-top:3rem;
+  margin-bottom:1rem;
+  font-size:1.6rem;
 }
 
-/* ===== FOOTER ===== */
-.site-footer{
-background:#000;
-padding:1.6rem 0;
+.lieu-content p{
+  margin-bottom:1.2rem;
 }
 
-.footer-inner{
-max-width:1200px;
-margin:0 auto;
-padding:0 20px;
-display:flex;
-justify-content:space-between;
-align-items:center;
+a{
+  color:#f28c28;
+  text-decoration:none;
 }
 
-.footer-left{
-display:flex;
-align-items:center;
-gap:20px;
+a:hover{
+  text-decoration:underline;
 }
 
-.like-btn{
-background:none;
-border:1px solid #f28c28;
-color:#f28c28;
-padding:5px 10px;
-cursor:pointer;
+.lien-sorcieres{
+  font-weight:500;
 }
 
-.social-icons{
-display:flex;
-gap:18px;
-}
-
-.social-icons a{
-display:inline-flex;
-align-items:center;
-}
-
-.social-icons svg{
-width:22px;
-height:22px;
-fill:#f28c28;
-transition:0.2s ease;
-}
-
-.social-icons svg:hover{
-opacity:0.7;
-transform:translateY(-2px);
-}
-
-.buy-btn{
-background:#1f1f1f;
-color:#f28c28;
-padding:8px 16px;
-text-decoration:none;
-border-radius:3px;
+@media screen and (max-width:768px){
+  .lieu-title{ font-size:1.7rem; }
+  .lieu-content{ font-size:1rem; }
 }
 
 </style>
@@ -153,12 +99,16 @@ border-radius:3px;
 
 <header class="site-header">
 <nav class="nav">
-<div>
+<div class="nav-title">
 <a href="index.html">retour</a>
 </div>
-<div>
-<a href="lieux-du-roman.html">les lieux</a>
-<a href="personnages.html">personnages</a>
+<div class="nav-menu">
+<a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
+<a href="personnages.html">les<span>personnages</span></a>
+<a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
+<a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
+<a href="bibliographie.html">bibliographie</a>
+<a href="making-off.html">making of</a>
 <a href="contact.html">contact</a>
 </div>
 </nav>
@@ -168,7 +118,6 @@ border-radius:3px;
 
 <div class="lieu-wrapper">
 <h1 class="lieu-title">Île d’Ouessant (Enez Eusa)</h1>
-
 <div class="map-full">
 <img src="images/cartes/ouessant.jpg" alt="Carte de l’île d’Ouessant">
 </div>
@@ -177,45 +126,74 @@ border-radius:3px;
 <section class="lieu-content">
 
 <h2>Un héritage insulaire ancien</h2>
-<p>Texte…</p>
+<p>
+Les <a href="sorcieres.html" class="lien-sorcieres">trois sorcières</a> ne surgissent pas du néant.
+</p>
 
 <h2>Archéologie du rivage : les berniques</h2>
-<p>Texte…</p>
+<p>
+Les récentes fouilles archéologiques ont mis au jour d’importants amas coquilliers.
+</p>
 
 <h2>Le passage de Paol Aurélien</h2>
-<p>Texte…</p>
+<p>
+La tradition rapporte que Paol Aurélien aborda d’abord l’île avant de rejoindre le continent.
+</p>
 
 <h2>Résistance et mémoire</h2>
-<p>Texte…</p>
+<p>
+L’île devient un espace liminaire — frontière géographique et spirituelle.
+</p>
 
 </section>
+
 </main>
 
 <footer class="site-footer">
 <div class="footer-inner">
-
 <div class="footer-left">
 
 <button class="like-btn">❤</button>
 
 <div class="social-icons">
 
-<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/ouessant.html" target="_blank">
+<!-- LinkedIn -->
+<a class="icon"
+   href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/ouessant.html"
+   target="_blank"
+   rel="noopener"
+   title="LinkedIn">
 <svg viewBox="0 0 24 24">
 <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-8.5c0-2-.04-4.5-2.8-4.5-2.8 0-3.2 2.2-3.2 4.3V24h-4V8z"/>
 </svg>
 </a>
 
-<a href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/ouessant.html" target="_blank">
+<!-- Facebook -->
+<a class="icon"
+   href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/ouessant.html"
+   target="_blank"
+   rel="noopener"
+   title="Facebook">
 <svg viewBox="0 0 24 24">
 <path d="M22 12a10 10 0 10-11.5 9.9v-7H8v-3h2.5V9.5c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.7-1.6 1.5V12H17l-.4 3h-2.7v7A10 10 0 0022 12z"/>
+</svg>
+</a>
+
+<!-- X -->
+<a class="icon"
+   href="https://twitter.com/intent/tweet?url=https://azenor.org/ouessant.html"
+   target="_blank"
+   rel="noopener"
+   title="X">
+<svg viewBox="0 0 24 24">
+<path d="M18.244 2H21.5l-7.19 8.21L22 22h-6.828l-5.348-6.998L3.5 22H.244l7.67-8.76L2 2h6.828l4.84 6.352L18.244 2zm-1.2 18h1.897L7.07 4H5.042l12.002 16z"/>
 </svg>
 </a>
 
 </div>
 </div>
 
-<div>
+<div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
 
