--- a/ouessant.html
+++ b/ouessant.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
 <meta name="description" content="Île d’Ouessant (Enez Eusa) — mémoire antique, archéologie et christianisation dans Le Testament d’Azénor.">
 <link rel="canonical" href="https://azenor.org/ouessant.html">
@@ -14,31 +14,23 @@
 <meta property="og:url" content="https://azenor.org/ouessant.html">
 <meta property="og:site_name" content="Le Testament d’Azénor">
 
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Île d’Ouessant (Enez Eusa) | Le Testament d’Azénor">
+<meta name="twitter:description" content="Mémoire antique, fouilles archéologiques et passage de Paol Aurélien.">
+
 <title>Île d’Ouessant (Enez Eusa) | Le Testament d’Azénor</title>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-<link href="css/style.css?v=20260115" rel="stylesheet">
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
+<link href="css/style.css?v=20260115" rel="stylesheet"/>
 
 <style>
-
-/* ===== FOND GLOBAL ===== */
-html, body{
-  margin:0;
-  padding:0;
-  background:#5c5c5c;
-  color:#ffffff;
-  font-family:'Inter', sans-serif;
-}
-
-/* ===== STRUCTURE ===== */
 .lieu-wrapper{
   max-width:1200px;
   margin:0 auto;
   padding:0 16px;
 }
-
 .lieu-title{
   text-align:center;
   color:#f28c28;
@@ -46,53 +38,27 @@ html, body{
   font-size:2.2rem;
   margin:2.5rem 0 2rem;
 }
-
 .map-full img{
   width:100%;
   height:auto;
   display:block;
 }
-
-/* ===== CONTENU ===== */
 .lieu-content{
   max-width:900px;
   margin:3rem auto 4rem;
   padding:0 16px;
   line-height:1.75;
-  font-size:1.05rem;
 }
-
 .lieu-content h2{
   color:#f28c28;
   font-family:'Libre Baskerville', serif;
   margin-top:3rem;
-  margin-bottom:1rem;
-  font-size:1.6rem;
 }
-
 .lieu-content p{
   margin-bottom:1.2rem;
 }
-
-a{
-  color:#f28c28;
-  text-decoration:none;
-}
-
-a:hover{
-  text-decoration:underline;
-}
-
-.lien-sorcieres{
-  font-weight:500;
-}
-
-@media screen and (max-width:768px){
-  .lieu-title{ font-size:1.7rem; }
-  .lieu-content{ font-size:1rem; }
-}
-
 </style>
+
 </head>
 
 <body>
@@ -119,7 +85,7 @@ a:hover{
 <div class="lieu-wrapper">
 <h1 class="lieu-title">Île d’Ouessant (Enez Eusa)</h1>
 <div class="map-full">
-<img src="images/cartes/ouessant.jpg" alt="Carte de l’île d’Ouessant">
+<img alt="Carte de l’île d’Ouessant" src="images/cartes/ouessant.jpg"/>
 </div>
 </div>
 
@@ -127,22 +93,38 @@ a:hover{
 
 <h2>Un héritage insulaire ancien</h2>
 <p>
-Les <a href="sorcieres.html" class="lien-sorcieres">trois sorcières</a> ne surgissent pas du néant.
+Les <a href="sorcieres.html">trois sorcières</a> ne surgissent pas du néant. Leur figure s’inscrit dans une mémoire plus ancienne, évoquée dès l’Antiquité par Pomponius Mela, qui mentionne l’île de Sena, habitée par neuf prêtresses capables de lever les tempêtes et de prédire l’avenir.
+</p>
+
+<p>
+Si l’identification géographique demeure discutée, la tradition bretonne a souvent rapproché cette île des terres du Ponant. Avec le temps, ces prêtresses sont devenues, dans le regard chrétien, des sorcières : non plus gardiennes d’un culte, mais survivances d’un monde ancien.
 </p>
 
 <h2>Archéologie du rivage : les berniques</h2>
 <p>
-Les récentes fouilles archéologiques ont mis au jour d’importants amas coquilliers.
+Les récentes fouilles archéologiques ont mis au jour d’importants amas coquilliers constitués sur plusieurs siècles. Les accumulations de patelles — les berniques — témoignent d’une économie littorale structurée et d’une présence humaine durable.
+</p>
+
+<p>
+Ces dépôts sont de véritables archives du quotidien. Ils rappellent que la survie sur l’île reposait sur une connaissance précise des marées et des ressources marines. Dans le roman, ces berniques deviennent matière symbolique : l’élément le plus humble du rivage se transforme en signe, voire en instrument de violence.
 </p>
 
 <h2>Le passage de Paol Aurélien</h2>
 <p>
-La tradition rapporte que Paol Aurélien aborda d’abord l’île avant de rejoindre le continent.
+La tradition rapporte que Paol Aurélien aborda d’abord l’île avant de rejoindre le continent et de fonder le siège épiscopal du Léon.
+</p>
+
+<p>
+Enez Eusa apparaît ainsi comme un seuil : lieu d’arrivée, de transition et peut-être de confrontation symbolique avant l’installation chrétienne durable.
 </p>
 
 <h2>Résistance et mémoire</h2>
 <p>
-L’île devient un espace liminaire — frontière géographique et spirituelle.
+Rozenn, Maod et Berc’hed n’incarnent pas un druidisme intact. Elles figurent plutôt la persistance d’un imaginaire insulaire attaché aux cycles naturels et aux forces marines, au moment où l’unification chrétienne tente d’imposer une nouvelle lecture du monde.
+</p>
+
+<p>
+L’île devient un espace liminaire — frontière géographique et spirituelle — où se joue une tension entre continuité et effacement.
 </p>
 
 </section>
@@ -152,41 +134,31 @@ L’île devient un espace liminaire — frontière géographique et spirituelle
 <footer class="site-footer">
 <div class="footer-inner">
 <div class="footer-left">
-
 <button class="like-btn">❤</button>
 
 <div class="social-icons">
 
-<!-- LinkedIn -->
 <a class="icon"
-   href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/ouessant.html"
-   target="_blank"
-   rel="noopener"
-   title="LinkedIn">
-<svg viewBox="0 0 24 24">
-<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-8.5c0-2-.04-4.5-2.8-4.5-2.8 0-3.2 2.2-3.2 4.3V24h-4V8z"/>
+href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/ouessant.html"
+rel="noopener" target="_blank" title="LinkedIn">
+<svg aria-hidden="true" viewBox="0 0 24 24">
+<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
 </svg>
 </a>
 
-<!-- Facebook -->
 <a class="icon"
-   href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/ouessant.html"
-   target="_blank"
-   rel="noopener"
-   title="Facebook">
-<svg viewBox="0 0 24 24">
-<path d="M22 12a10 10 0 10-11.5 9.9v-7H8v-3h2.5V9.5c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.7-1.6 1.5V12H17l-.4 3h-2.7v7A10 10 0 0022 12z"/>
+href="https://twitter.com/intent/tweet?url=https://azenor.org/ouessant.html"
+rel="noopener" target="_blank" title="X">
+<svg aria-hidden="true" viewBox="0 0 24 24">
+<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
 </svg>
 </a>
 
-<!-- X -->
 <a class="icon"
-   href="https://twitter.com/intent/tweet?url=https://azenor.org/ouessant.html"
-   target="_blank"
-   rel="noopener"
-   title="X">
-<svg viewBox="0 0 24 24">
-<path d="M18.244 2H21.5l-7.19 8.21L22 22h-6.828l-5.348-6.998L3.5 22H.244l7.67-8.76L2 2h6.828l4.84 6.352L18.244 2zm-1.2 18h1.897L7.07 4H5.042l12.002 16z"/>
+href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/ouessant.html"
+rel="noopener" target="_blank" title="Facebook">
+<svg aria-hidden="true" viewBox="0 0 24 24">
+<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
 </svg>
 </a>
 
@@ -196,7 +168,6 @@ L’île devient un espace liminaire — frontière géographique et spirituelle
 <div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
-
 </div>
 </footer>
 
