--- a/gwenc_hlan.html
+++ b/gwenc_hlan.html
@@ -200,6 +200,16 @@ a.lien-discret-orange:focus{
 
 <div class="extrait excerpt">
 <h2 class="character-name">Gwenc’hlan</h2>
+  <div class="prononciation">
+  <p>
+    <strong>Comment se prononce Gwenc’hlan en breton ?</strong>
+  </p>
+
+  <audio controls preload="none">
+    <source src="images/accueil/gwenc-hlan.wav" type="audio/wav">
+    Votre navigateur ne supporte pas la lecture audio.
+  </audio>
+</div>
 
 <p>« Son nom est Gwenc’hlan. C’est un barde, un homme du passé… »</p>
 
