--- a/maodez.html
+++ b/maodez.html
@@ -37,6 +37,136 @@
   fill:#f28c28;
 }
 </style>
+  /* ===== FOOTER AMÉLIORÉ ===== */
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.5rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.4rem 0.8rem;
+  cursor:pointer;
+}
+
+.social-icons a{
+  color:#f28c28;
+  font-size:1.1rem;
+  text-decoration:none;
+  margin-right:0.6rem;
+}
+
+.footer-right .buy-btn{
+  background:#f28c28;
+  color:#000;
+  padding:0.6rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+}
+</style>
+<style>
+/* ===== FOOTER AMÉLIORÉ v2 ===== */
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.6rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1.2rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.35rem 0.7rem;
+  cursor:pointer;
+  font-size:0.9rem;
+}
+
+/* Social icons as round glyphs */
+.social-icons a{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:28px;
+  height:28px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  font-size:0.85rem;
+  font-weight:600;
+  text-decoration:none;
+}
+
+/* Buy button: grey relief, orange text */
+.footer-right .buy-btn{
+  background:linear-gradient(#3a3a3a, #1f1f1f);
+  color:#f28c28;
+  padding:0.55rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+  border-radius:3px;
+  box-shadow:0 2px 4px rgba(0,0,0,0.6);
+}
+</style>
+<style>
+.social-icons .icon{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+  margin-right:0.5rem;
+}
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+}
+</style>
+<style>
+/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
+main{
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.site-footer{
+  margin-top: 0 !important;
+}
 </head>
 
 <body class="personnage">
