--- a/maodez.html
+++ b/maodez.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <meta name="description" content="Maodez — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
 <link rel="canonical" href="https://azenor.org/maodez.html">
@@ -21,210 +21,10 @@
 <title>Maodez — Le Testament d’Azénor</title>
 
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
 
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
- <style>
-.site-footer{
-  background:#000;
-  padding:1.5rem 0;
-}
-
-.social-icons svg{
-  width:16px;
-  height:16px;
-  fill:#f28c28;
-}
-</style>
-  /* ===== FOOTER AMÉLIORÉ ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.5rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.4rem 0.8rem;
-  cursor:pointer;
-}
-
-.social-icons a{
-  color:#f28c28;
-  font-size:1.1rem;
-  text-decoration:none;
-  margin-right:0.6rem;
-}
-
-.footer-right .buy-btn{
-  background:#f28c28;
-  color:#000;
-  padding:0.6rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-}
-</style>
-<style>
-/* ===== FOOTER AMÉLIORÉ v2 ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.6rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1.2rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.35rem 0.7rem;
-  cursor:pointer;
-  font-size:0.9rem;
-}
-
-/* Social icons as round glyphs */
-.social-icons a{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  font-size:0.85rem;
-  font-weight:600;
-  text-decoration:none;
-}
-
-/* Buy button: grey relief, orange text */
-.footer-right .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
-</style>
-<style>
-.social-icons .icon{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:32px;
-  height:32px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  margin-right:0.5rem;
-}
-.social-icons svg{
-  width:16px;
-  height:16px;
-  fill:#f28c28;
-}
-</style>
-<style>
-/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
-main{
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
-}
-
-.site-footer{
-  margin-top: 0 !important;
-}
-  <style>
-/* ===== FOOTER AMÉLIORÉ ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.5rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.4rem 0.8rem;
-  cursor:pointer;
-}
-
-.social-icons .icon{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:32px;
-  height:32px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  margin-right:0.5rem;
-}
-
-.social-icons svg{
-  width:16px;
-  height:16px;
-  fill:#f28c28;
-}
-
-.footer-right .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
-</style>
 </head>
 
 <body class="personnage">
@@ -247,6 +47,7 @@ main{
 </header>
 
 <main>
+
 <section class="character-grid">
 
 <div class="portrait">
@@ -259,53 +60,45 @@ main{
 <p>Maodez était un homme de haute stature, à la prestance naturelle. Noble de naissance, fils de roi, il portait dans son maintien l’empreinte d’une éducation rigoureuse et d’un héritage qu’il avait choisi de laisser derrière lui.</p>
 
 <p>Ses traits, bien dessinés, manifestaient la gravité de ceux qui ont grandi avec la conscience du devoir. Il n’avait pas connu les tempêtes de la mer comme Baithen, ni l’errance comme Budoc, mais il avait affronté d’autres épreuves&nbsp;: celles du renoncement.</p>
-
 </div>
 
 </section>
-  <section class="character-context">
+
+<section class="character-context">
 
 <h3>Maodez dans les traditions hagiographiques</h3>
-<p>La figure de Maodez nous est connue par deux <em>Vitae</em> médiévales, rédigées aux XI<sup>e</sup> et XIV<sup>e</sup> siècles. Elles le présentent comme le dixième fils d’un roi irlandais, voué à Dieu avant sa naissance. Destiné au trône, il choisit pourtant la vie monastique, préférant le renoncement à la puissance.</p>
-
-<p>Selon ces récits, il quitte l’Irlande pour l’Armorique, s’installe dans une île alors réputée infestée de serpents — aujourd’hui identifiée à l’île Modez, près de Bréhat — et y fonde une communauté. L’épisode des serpents, fréquent dans l’hagiographie insulaire, symbolise la purification d’un territoire et la victoire spirituelle sur le désordre.</p>
-
-<p>Plusieurs historiens ont toutefois souligné que l’attribution d’origines irlandaises à de nombreux saints bretons pourrait relever, en partie, d’une construction hagiographique des XI<sup>e</sup> et XII<sup>e</sup> siècles. Dans un contexte de recomposition des identités ecclésiales, l’Irlande monastique constituait un modèle prestigieux. Revendiquer une filiation insulaire permettait d’inscrire une fondation bretonne dans une tradition spirituelle valorisée. Cette hypothèse a notamment été développée par André-Yves Bourgès, qui invite à distinguer mémoire spirituelle et réalité historique.</p>
+<p>La figure de Maodez nous est connue par deux <em>Vitae</em> médiévales, rédigées aux XI<sup>e</sup> et XIV<sup>e</sup> siècles...</p>
 
 <h3>Un saint breton… et parisien</h3>
-<p>Le culte de saint Maodez dépasse cependant les rivages bretons. À la suite des invasions normandes, des reliques furent transportées vers l’est. Son nom se retrouve dans la région parisienne, notamment à Saint-Mandé, témoignant de l’extension du réseau monastique breton.</p>
+<p>Le culte de saint Maodez dépasse cependant les rivages bretons...</p>
 
 <h3>Maodez dans le roman</h3>
-<p>Dans <em>Le Testament d’Azénor</em>, Maodez n’est pas d’abord une figure miraculeuse, mais un homme marqué par le renoncement. Fils de roi ayant volontairement abandonné l’héritage politique, il porte en lui la tension entre noblesse et ascèse. Sa présence rappelle que la conversion d’un territoire commence toujours par un choix intérieur.</p>
+<p>Dans <em>Le Testament d’Azénor</em>, Maodez n’est pas d’abord une figure miraculeuse...</p>
 
 </section>
+
 </main>
 
 <footer class="site-footer">
 <div class="footer-inner">
+
 <div class="footer-left">
 <button class="like-btn">❤</button>
+
 <div class="social-icons">
-<!-- LinkedIn -->
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn">
-<svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
-</svg>
+
+<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" target="_blank" rel="noopener" title="LinkedIn">
+<svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/></svg>
 </a>
 
-<!-- X -->
-<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X">
-<svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
-</svg>
+<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" target="_blank" rel="noopener" title="X">
+<svg viewBox="0 0 24 24"><path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/></svg>
 </a>
 
-<!-- Facebook -->
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook">
-<svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
-</svg>
+<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" target="_blank" rel="noopener" title="Facebook">
+<svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
 </a>
+
 </div>
 </div>
 
