--- a/maodez.html
+++ b/maodez.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <meta name="description" content="Maodez — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
 <link rel="canonical" href="https://azenor.org/maodez.html">
@@ -20,11 +20,11 @@
 
 <title>Maodez — Le Testament d’Azénor</title>
 
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
-<link href="css/style.css?v=20260115" rel="stylesheet"/>
+<link href="css/style.css?v=20260115" rel="stylesheet">
 </head>
 
 <body class="personnage">
