--- a/maodez.html
+++ b/maodez.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
 <meta name="description" content="Maodez — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
 <link rel="canonical" href="https://azenor.org/maodez.html">
@@ -20,11 +20,11 @@
 
 <title>Maodez — Le Testament d’Azénor</title>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
 
-<link href="css/style.css?v=20260115" rel="stylesheet">
+<link href="css/style.css?v=20260115" rel="stylesheet"/>
 </head>
 
 <body class="personnage">
@@ -47,7 +47,6 @@
 </header>
 
 <main>
-
 <section class="character-grid">
 
 <div class="portrait">
@@ -60,43 +59,47 @@
 <p>Maodez était un homme de haute stature, à la prestance naturelle. Noble de naissance, fils de roi, il portait dans son maintien l’empreinte d’une éducation rigoureuse et d’un héritage qu’il avait choisi de laisser derrière lui.</p>
 
 <p>Ses traits, bien dessinés, manifestaient la gravité de ceux qui ont grandi avec la conscience du devoir. Il n’avait pas connu les tempêtes de la mer comme Baithen, ni l’errance comme Budoc, mais il avait affronté d’autres épreuves&nbsp;: celles du renoncement.</p>
+
 </div>
 
 </section>
 
 <section class="character-context">
-
 <h3>Maodez dans les traditions hagiographiques</h3>
-<p>La figure de Maodez nous est connue par deux <em>Vitae</em> médiévales, rédigées aux XI<sup>e</sup> et XIV<sup>e</sup> siècles...</p>
+<p>La figure de Maodez nous est connue par deux <em>Vitae</em> médiévales...</p>
 
 <h3>Un saint breton… et parisien</h3>
 <p>Le culte de saint Maodez dépasse cependant les rivages bretons...</p>
 
 <h3>Maodez dans le roman</h3>
 <p>Dans <em>Le Testament d’Azénor</em>, Maodez n’est pas d’abord une figure miraculeuse...</p>
-
 </section>
 
 </main>
 
 <footer class="site-footer">
 <div class="footer-inner">
-
 <div class="footer-left">
 <button class="like-btn">❤</button>
 
 <div class="social-icons">
 
 <a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" target="_blank" rel="noopener" title="LinkedIn">
-<svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/></svg>
+<svg viewBox="0 0 24 24">
+<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/>
+</svg>
 </a>
 
 <a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" target="_blank" rel="noopener" title="X">
-<svg viewBox="0 0 24 24"><path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/></svg>
+<svg viewBox="0 0 24 24">
+<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/>
+</svg>
 </a>
 
 <a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" target="_blank" rel="noopener" title="Facebook">
-<svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
+<svg viewBox="0 0 24 24">
+<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/>
+</svg>
 </a>
 
 </div>
@@ -105,7 +108,6 @@
 <div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
-
 </div>
 </footer>
 
