--- a/maodez.html
+++ b/maodez.html
@@ -25,6 +25,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
 
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
+  <style>
+.social-icons .icon{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+}
+
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+}
+</style>
 </head>
 
 <body class="personnage">
