--- a/maodez.html
+++ b/maodez.html
@@ -42,6 +42,23 @@
   fill:#f28c28;
 }
 </style>
+  <style>
+.social-icons .icon{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+}
+
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+}
+</style>
 </head>
 
 <body class="personnage">
